--- a/client/src/app/layout/main/main.component.html
+++ b/client/src/app/layout/main/main.component.html
@@ -1,3 +1,3 @@
-<p>
-    main works!
-</p>
+<agm-map class="gmap" [latitude]="-0.2521379" [longitude]="-78.4922425" [zoom]="15" (mapClick)="address_mapEvent($event)">
+    <agm-marker [latitude]="-0.2521379" [longitude]="-78.4922425" [markerDraggable]="true" (dragEnd)="address_mapEvent($event)" [animation]="'DROP'"></agm-marker>
+</agm-map>
